<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OneBusAway</string>
    <string name="navdrawer_item_nearby">Nearby</string>
    <string name="navdrawer_item_starred_stops">Starred stops</string>
    <string name="navdrawer_item_starred_routes">Starred routes</string>
    <string name="navdrawer_item_my_reminders">My reminders</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_help">Help</string>
    <string name="navdrawer_item_send_feedback">Send feedback</string>
    <string name="navdrawer_item_open_source">Visit us on GitHub</string>
    <string name="navdrawer_item_plan_trip">Plan a trip (beta)</string>
    <string name="navdrawer_item_pay_fare">Pay my fare</string>
    <string name="trip_service_perm_label">start the trip service</string>
    <string name="trip_service_perm_description">Allows the application to implement reminders for
        upcoming buses.
    </string>
    <string name="generic_comm_error">Sorry, there was a communication error and we can\'t show this
        information. Try again and it might work.
    </string>
    <string name="generic_comm_error_toast">Failed to update. We\'ll try again in a minute.</string>
    <string name="route_not_found_error_no_region">Sorry, that particular route can\'t be found. If
        this was a
        shortcut, it\'s possible your link is out of date, or a region hasn\'t been selected yet
        (Change in
        \"Preferences->Your region\").
    </string>
    <string name="route_not_found_error_with_region_name">Sorry, that particular route can\'t be
        found. If this was a
        shortcut, it\'s possible your link is out of date, or the wrong region is selected (Your
        current region is
        %1$s. Change in \"Preferences->Your region\").
    </string>
    <string name="stop_not_found_error_no_region">Sorry, that particular stop can\'t be found. If
        this was a
        shortcut, it\'s possible your link is out of date, or a region hasn\'t been selected yet
        (Change in
        \"Preferences->Your region\").
    </string>
    <string name="stop_not_found_error_with_region_name">Sorry, that particular stop can\'t be
        found. If this was a
        shortcut, it\'s possible your link is out of date, or the wrong region is selected (Your
        current region is
        %1$s. Change in \"Preferences->Your region\").
    </string>
    <string name="internal_error">Oops, something went wrong. Please check your Internet connection and try again.</string>
    <string name="out_of_memory_error">Sorry, there isn\'t enough available memory to handle that
        request.
    </string>
    <string name="bad_gateway_error">%1$s\'s servers are overloaded. Please excuse us!</string>
    <string name="map_generic_error">Unable to get stops.</string>
    <string name="no_network_error">You appear to be offline or are not connected to the network.
    </string>
    <string name="airplane_mode_error">You are not connected to the network.\nTurn off Airplane
        Mode?
    </string>
    <string name="custom_api_url_error">Invalid URL. Please enter a working %1$s server.</string>
    <string name="custom_otp_api_url_error">Invalid URL. Please enter a working OpenTripPlanner server.
    </string>
    <string name="direction_n">Northbound</string>
    <string name="direction_ne">Northeast bound</string>
    <string name="direction_e">Eastbound</string>
    <string name="direction_se">Southeast bound</string>
    <string name="direction_s">Southbound</string>
    <string name="direction_sw">Southwest bound</string>
    <string name="direction_w">Westbound</string>
    <string name="direction_nw">Northwest bound</string>
    <string name="direction_none"></string>
    <string name="loading">Loading&#8230;</string>
    <string name="browser_error">Unable to launch browser.</string>
    <string name="search_hint">Search stop or route IDs</string>
    <string name="search">Search</string>
    <string name="checkmark_description">Selection checkmark</string>
    <string name="map_option_mylocation">My Location</string>
    <string name="map_option_search">Search</string>
    <string name="main_help_title">Help</string>
    <string name="main_help_whatsnew_title">What\'s New?</string>
    <string name="main_help_whatsnew">• <b>Bug fixes</b> Several bug fixes and fit and finish improvements. - See https://bit.ly/oba-android-releases</string>
    <string name="main_help_close">Close</string>
    <string name="main_help_legend_title">Legend</string>
    <string name="main_help_legend_ontime">Green means \"On time\"</string>
    <string name="main_help_legend_late">Blue means \"Running late\"</string>
    <string name="main_help_legend_early">Red means \"Running early\"</string>
    <string name="main_help_legend_scheduled">Gray means \"Scheduled arrival\" - We don\'t know
        where the bus is now, but the schedule says there is an upcoming arrival
    </string>
    <string name="main_help_legend_canceled">Gray with strikethrough means the trip has been
        canceled - this bus is NOT coming
    </string>
    <string name="main_nolocation_title">Location not enabled</string>
    <string name="main_nolocation">%1$s would like your location, do you want to enable it now?</string>
    <string name="main_never_ask_again">Never ask again</string>
    <string name="main_never_show_again">Never show again</string>
    <string name="main_waiting_for_location">Trying to get a fix on your location&#8230;</string>
    <string name="no_location_permission">Unable to get your location.  Please give app location permissions via system settings.</string>
    <string name="main_outofrange_title">Out of range</string>
    <string name="main_outofrange">You\'re looking at a place outside the %1$s service area.\n\nMove
        map to %1$s now?
    </string>
    <string name="main_outofrange_yes">Take me there</string>
    <string name="main_outofrange_no">Stay where I am</string>
    <string name="bus_options_menu_add_star">Add star to route</string>
    <string name="bus_options_menu_remove_star">Remove star from route</string>
    <string name="bus_options_menu_show_vehicles_on_map">Show vehicles on map</string>
    <string name="bus_options_menu_show_trip_details">Show trip status</string>
    <string name="bus_options_menu_set_reminder">Set a reminder</string>
    <string name="bus_options_menu_edit_reminder">Edit this reminder</string>
    <string name="bus_options_menu_show_only_this_route">Show only this route</string>
    <string name="bus_options_menu_show_all_routes">"Show all routes"</string>
    <string name="bus_options_menu_show_route_schedule">Show route schedule</string>
    <string name="bus_options_menu_report_trip_problem">Report arrival time problem</string>
    <string name="stop_info_ontime">On time</string>
    <string name="stop_info_arrived_ontime">Arrived on time</string>
    <string name="stop_info_departed_ontime">Departed on time</string>
    <plurals name="stop_info_arrive_delayed">
        <item quantity="one">1 min delay</item>
        
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            min delay
        </item>
    </plurals>
    <plurals name="stop_info_arrive_early">
        <item quantity="one">1 min early</item>
        
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            min early
        </item>
    </plurals>
    <plurals name="stop_info_depart_delayed">
        <item quantity="one">Departed 1 min late</item>
        
        <item quantity="other">Departed
            <xliff:g id="count">%d</xliff:g>
            min late
        </item>
    </plurals>
    <plurals name="stop_info_depart_early">
        <item quantity="one">Departed 1 min early</item>
        
        <item quantity="other">Departed
            <xliff:g id="count">%d</xliff:g>
            min early
        </item>
    </plurals>
    <plurals name="stop_info_arrived_delayed">
        <item quantity="one">Arrived 1 min late</item>
        
        <item quantity="other">Arrived
            <xliff:g id="count">%d</xliff:g>
            min late
        </item>
    </plurals>
    <plurals name="stop_info_arrived_early">
        <item quantity="one">Arrived 1 min early</item>
        
        <item quantity="other">Arrived
            <xliff:g id="count">%d</xliff:g>
            min early
        </item>
    </plurals>
    <plurals name="stop_info_status_late_without_arrive_depart">
        <item quantity="one">1 min late</item>
        
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            min late
        </item>
    </plurals>
    <plurals name="stop_info_status_early_without_arrive_depart">
        <item quantity="one">1 min early</item>
        
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            min early
        </item>
    </plurals>
    <plurals name="stop_info_car_count">
        <item quantity="one">1 car</item>
        
        <item quantity="other">
            <xliff:g id="count">%d</xliff:g>
            cars
        </item>
    </plurals>
    <string name="stop_info_scheduled_arrival">Scheduled arrival</string>
    <string name="stop_info_scheduled_departure">Scheduled departure</string>
    <string name="stop_info_scheduled">Scheduled</string>
    <string name="stop_info_canceled_arrival">CANCELED arrival</string>
    <string name="stop_info_canceled_departure">CANCELED departure</string>
    <string name="stop_info_canceled">CANCELED</string>
    <string name="stop_info_time_arriving_at">Arriving at %1s</string>
    <string name="stop_info_time_departing_at">Departing at %1s</string>
    <string name="stop_info_time_arrived_at">Arrived at %1s</string>
    <string name="stop_info_time_departed_at">Departed at %1s</string>
    <string name="stop_info_frequency_from">Every %1$d mins from %2$s</string>
    <string name="stop_info_frequency_until">Every %1$d mins until %2$s</string>
    <string name="preferences_category_advanced">Advanced</string>
    <string name="preferences_screen_advanced_summary">Dig deeper into the nuts and bolts</string>
    <string name="preferences_otp_api_servername_title">OpenTripPlanner API Server</string>
    <string name="preferences_otp_api_servername_summary">Determines the server used in OpenTripPlanner
        API calls
    </string>
    <string name="preferences_oba_api_servername_title">%1$s API Server</string>
    <string name="preferences_oba_api_servername_summary">Determines the server used in %1$s API calls</string>
    <string name="preferences_oba_api_servername_hint">example.onebusaway.org</string>
    <string name="preferences_otp_api_servername_hint">example.opentripplanner.org/otp</string>
    <string name="preferences_experimental_regions_title">Experimental regions</string>
    <string name="preferences_experimental_regions_summary">Enables regions that may be unstable
    </string>
    <string name="preferences_push_firebase_data_title">Push Firebase data to server</string>
    <string name="preferences_push_firebase_data_summary">If you\'ve opted into a travel behavior study, tapping this option will trigger a push of collected travel behavior data to the Firebase server. This is useful while testing the app and is intended for use by developers. For best results make sure you have a strong Internet connection first.</string>
    <string name="preferences_reset_donation_timestamps_title">Reset Donation Timestamps</string>
    <string name="preferences_reset_donation_timestamps_summary">Tapping this option will clear both the \'Remind Me Later\' and \'Don\'t Bother Me\' timestamps associated with donation requests.</string>
    <string name="display_test_alerts">Display test alerts</string>
    <string name="display_test_wide_alerts_for_regions">Display test-wide alerts for regions</string>
</resources>